--- a/Bagahe/Bagahe/Bagahe.Droid/packages.config
+++ b/Bagahe/Bagahe/Bagahe.Droid/packages.config
@@ -1,9 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Acr.Support" version="2.1.0" targetFramework="monoandroid70" />
+  <package id="Acr.UserDialogs" version="6.5.1" targetFramework="monoandroid70" />
+  <package id="AndHUD" version="1.2.0" targetFramework="monoandroid70" />
   <package id="MvvmCross" version="5.1.1" targetFramework="monoandroid70" />
   <package id="MvvmCross.Binding" version="5.1.1" targetFramework="monoandroid70" />
   <package id="MvvmCross.Core" version="5.1.1" targetFramework="monoandroid70" />
   <package id="MvvmCross.Platform" version="5.1.1" targetFramework="monoandroid70" />
+  <package id="Splat" version="2.0.0" targetFramework="monoandroid70" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid70" />
   <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid70" />
   <package id="Xamarin.Android.Support.Compat" version="25.4.0.2" targetFramework="monoandroid70" />
