--- a/Bagahe/Bagahe/Bagahe/Bagahe.csproj
+++ b/Bagahe/Bagahe/Bagahe/Bagahe.csproj
@@ -37,41 +37,47 @@
   <ItemGroup>
     <Compile Include="CoreApp.cs" />
     <Compile Include="Helpers\MvxPresenterHelpers.cs" />
+    <Compile Include="Interfaces\IForgotPasswordService.cs" />
     <Compile Include="Interfaces\ILoginService.cs" />
     <Compile Include="Interfaces\ISignupService.cs" />
     <Compile Include="Models\SignupErrMsg.cs" />
     <Compile Include="Models\SignupFields.cs" />
+    <Compile Include="Services\ForgotPasswordService.cs" />
     <Compile Include="Services\LoginService.cs" />
     <Compile Include="Services\SignupService.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
+    <Compile Include="ViewModels\Login\ForgotPasswordViewModel.cs" />
     <Compile Include="ViewModels\Login\LoginViewModel.cs" />
     <Compile Include="ViewModels\Login\SignupResultViewModel.cs" />
     <Compile Include="ViewModels\Login\SignupViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\Search\TrackBaggageResultViewModel.cs" />
     <Compile Include="ViewModels\Search\TrackBaggageViewModel.cs" />
-    <Compile Include="Views\LoginView.xaml.cs">
+    <Compile Include="ViewModels\Login\Views\ForgotPasswordView.xaml.cs">
+      <DependentUpon>ForgotPasswordView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModels\Login\Views\LoginView.xaml.cs">
       <DependentUpon>LoginView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\MainView.xaml.cs">
+    <Compile Include="ViewModels\Login\Views\MainView.xaml.cs">
       <DependentUpon>MainView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\SignupResultView.xaml.cs">
+    <Compile Include="ViewModels\Login\Views\SignupResultView.xaml.cs">
       <DependentUpon>SignupResultView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\SignupView.xaml.cs">
+    <Compile Include="ViewModels\Login\Views\SignupView.xaml.cs">
       <DependentUpon>SignupView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\TrackBaggageResultView.xaml.cs">
+    <Compile Include="ViewModels\Login\Views\TrackBaggageResultView.xaml.cs">
       <DependentUpon>TrackBaggageResultView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\TrackBaggageView.xaml.cs">
+    <Compile Include="ViewModels\Login\Views\TrackBaggageView.xaml.cs">
       <DependentUpon>TrackBaggageView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Views\MainView.xaml">
+    <EmbeddedResource Include="ViewModels\Login\Views\MainView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
@@ -128,31 +134,37 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Views\LoginView.xaml">
+    <EmbeddedResource Include="ViewModels\Login\Views\LoginView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Views\SignupView.xaml">
+    <EmbeddedResource Include="ViewModels\Login\Views\SignupView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Views\SignupResultView.xaml">
+    <EmbeddedResource Include="ViewModels\Login\Views\SignupResultView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Views\TrackBaggageView.xaml">
+    <EmbeddedResource Include="ViewModels\Login\Views\TrackBaggageView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Views\TrackBaggageResultView.xaml">
+    <EmbeddedResource Include="ViewModels\Login\Views\TrackBaggageResultView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="ViewModels\Login\Views\ForgotPasswordView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
