--- a/Bagahe/Bagahe/Bagahe/Bagahe.csproj
+++ b/Bagahe/Bagahe/Bagahe/Bagahe.csproj
@@ -40,15 +40,20 @@
     <Compile Include="Interfaces\IForgotPasswordService.cs" />
     <Compile Include="Interfaces\ILoginService.cs" />
     <Compile Include="Interfaces\ISignupService.cs" />
-    <Compile Include="Models\SignupErrMsg.cs" />
-    <Compile Include="Models\SignupFields.cs" />
+    <Compile Include="Models\PasswordErrMsgModel.cs" />
+    <Compile Include="Models\PasswordFieldsModel.cs" />
+    <Compile Include="Models\SignupErrMsgModel.cs" />
+    <Compile Include="Models\SignupFieldsModel.cs" />
+    <Compile Include="Models\UserInfoModel.cs" />
     <Compile Include="Services\ForgotPasswordService.cs" />
     <Compile Include="Services\LoginService.cs" />
     <Compile Include="Services\SignupService.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
+    <Compile Include="ViewModels\Login\NewPasswordViewModel.cs" />
+    <Compile Include="ViewModels\Login\VerifyCodeViewModel.cs" />
     <Compile Include="ViewModels\Login\ForgotPasswordViewModel.cs" />
     <Compile Include="ViewModels\Login\LoginViewModel.cs" />
-    <Compile Include="ViewModels\Login\SignupResultViewModel.cs" />
+    <Compile Include="ViewModels\Login\SuccessPageViewModel.cs" />
     <Compile Include="ViewModels\Login\SignupViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\Search\TrackBaggageResultViewModel.cs" />
@@ -63,8 +68,11 @@
       <DependentUpon>MainView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\SignupResultView.xaml.cs">
-      <DependentUpon>SignupResultView.xaml</DependentUpon>
+    <Compile Include="Views\NewPasswordView.xaml.cs">
+      <DependentUpon>NewPasswordView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SuccessPageView.xaml.cs">
+      <DependentUpon>SuccessPageView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\SignupView.xaml.cs">
       <DependentUpon>SignupView.xaml</DependentUpon>
@@ -74,6 +82,9 @@
     </Compile>
     <Compile Include="Views\TrackBaggageView.xaml.cs">
       <DependentUpon>TrackBaggageView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\VerifyCodeView.xaml.cs">
+      <DependentUpon>VerifyCodeView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -95,7 +106,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Mono.Android">
-      <HintPath>..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\MonoAndroid\v7.0\Mono.Android.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\MonoAndroid\v7.0\Mono.Android.dll</HintPath>
     </Reference>
     <Reference Include="MvvmCross.Binding, Version=5.1.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\MvvmCross.Binding.5.1.1\lib\portable-net45+win+wpa81+wp80\MvvmCross.Binding.dll</HintPath>
@@ -146,7 +157,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Views\SignupResultView.xaml">
+    <EmbeddedResource Include="Views\SuccessPageView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
@@ -165,6 +176,18 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\ForgotPasswordView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\VerifyCodeView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\NewPasswordView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
