--- a/Bagahe/Bagahe/Bagahe.Droid/packages.config
+++ b/Bagahe/Bagahe/Bagahe.Droid/packages.config
@@ -10,6 +10,7 @@
   <package id="Splat" version="2.0.0" targetFramework="monoandroid70" />
   <package id="SQLite.Net.Async-PCL" version="3.1.1" targetFramework="monoandroid70" />
   <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="monoandroid70" />
+  <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="monoandroid70" />
   <package id="sqlite-net-pcl" version="1.4.118" targetFramework="monoandroid70" />
   <package id="SQLitePCLRaw.bundle_green" version="1.1.5" targetFramework="monoandroid70" />
   <package id="SQLitePCLRaw.core" version="1.1.5" targetFramework="monoandroid70" />
@@ -31,5 +32,5 @@
   <package id="Xamarin.Android.Support.v7.Palette" version="25.4.0.2" targetFramework="monoandroid70" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.4.0.2" targetFramework="monoandroid70" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid70" />
-  <package id="Xamarin.Forms" version="2.3.4.270" targetFramework="monoandroid70" />
+  <package id="Xamarin.Forms" version="2.3.4.231" targetFramework="monoandroid70" />
 </packages>
