--- a/Bagahe/Bagahe/Bagahe.iOS/packages.config
+++ b/Bagahe/Bagahe/Bagahe.iOS/packages.config
@@ -4,5 +4,5 @@
   <package id="MvvmCross.Binding" version="5.1.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="MvvmCross.Core" version="5.1.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="MvvmCross.Platform" version="5.1.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
-  <package id="Xamarin.Forms" version="2.3.4.270" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Xamarin.Forms" version="2.3.4.231" targetFramework="xamarinios10" />
 </packages>
