--- a/Bagahe/Bagahe/Bagahe/packages.config
+++ b/Bagahe/Bagahe/Bagahe/packages.config
@@ -5,6 +5,7 @@
   <package id="MvvmCross.Binding" version="5.1.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="MvvmCross.Core" version="5.1.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="MvvmCross.Platform" version="5.1.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Splat" version="1.6.2" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="SQLite.Net.Async-PCL" version="3.1.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
